--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -22,17 +22,17 @@
     "react-dom": ">= 16.8.x"
   },
   "devDependencies": {
-    "@testing-library/react-hooks": "^5.0.3",
+    "@testing-library/react-hooks": "^8.0.0",
     "@types/cheerio": "0.22.23",
     "@types/express": "4.17.11",
-    "@types/react": "16.9.53",
-    "@types/react-test-renderer": "17.0.1",
+    "@types/react": "^18.0.5",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/request-promise": "4.1.47",
     "cheerio": "1.0.0-rc.5",
     "express": "4.17.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-test-renderer": "17.0.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-test-renderer": "^18.0.0",
     "request-promise": "4.2.6",
     "rollup-plugin-typescript2": "0.31.1",
     "tslib": "2.1.0"
